# Homeworks

3_02 Copying Smart Arrays/: main.cpp
App_with_errors/: main.cpp
Homework 02_01/: main.cpp
Homework 02_02/: main.cpp
Homework 02_03/: main.cpp
Homework 03_01/: main.cpp
Homework 03_02/: main.cpp
Homework 04_01/: main.cpp
Homework 04_02/: main.cpp
Homework 05_01/: main.cpp
Homework 05_02/: main.cpp
Homework 05_03/: main.cpp
Homework 06_01/: main.cpp  math_func.cpp  math_func.h
Homework 06_02/: MyClass.cpp  MyClass.h  main.cpp
Homework 06_03/: .gitignore  CMakeLists.txt  equilateral_triangle.cpp  equilateral_triangle.h  isosceles_triangle.h  main.cpp  parallelogram.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhomb.h  right_triangle.cpp  right_triangle.h  square.cpp  triangle.cpp  triangle.h
Homework 07_01/: main.cpp
Homework 07_02/: main.cpp
Homework 08_01/: main.cpp
Homework 08_02/: equilateral_triangle.cpp  equilateral_triangle.h  error_creating_figure.cpp  error_creating_figure.h  figure.cpp  figure.h  isosceles_triangle.cpp  isosceles_triangle.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  right_triangle.cpp  right_triangle.h  square.cpp  square.h  triangle.cpp  triangle.h
Homework 09_01/: main.cpp
Homework 09_02/: main.cpp
Homework 11_01/: CMakeLists.txt
Homework 11_01/GreeterLib/: CMakeLists.txt  Greeter.cpp  Greeter.h
Homework 11_01/Greeter_client/: CMakeLists.txt  main.cpp
Homework 11_02/: CMakeLists.txt
Homework 11_05/: CMakeLists.txt
Homework 11_05/FigureLibrary/: CMakeLists.txt  equilateral_triangle.cpp  figure.cpp  figure.h  isosceles_triangle.cpp  parallelogram.h  quadrangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  square.h  triangle.h
Homework 1_02/: main.cpp
Homework 2_01/: main.cpp
Homework 2_02/: main.cpp
Homework 3_01 Smart Array/: main.cpp
Homework 3_01 Sort sliyaniem/: main.cpp
Homework 4_01 Print dynamic array/: main.cpp
Homework 5_01_Displaying a pyramid on an array/: main.cpp
Homework 5_02_The journey through the Pyramid/: main.cpp
Homework05_01_the_squaring_pattern/: CMakeLists.txt  main.cpp  pattern.h
Homework05_02_the_table_pattern/: CMakeLists.txt  main.cpp  pattern.h
Homework05_03_functor_counter/: CMakeLists.txt  functor.h  main.cpp
Homework07_01__Character_frequency/: main.cpp
Homework07_02_removing_duplicates/: main.cpp
Homework07_03_vector_analog/: CMakeLists.txt  main.cpp  patern.h
Homework_4_01_test_a_biased_list/: .gitignore  CMakeLists.txt  Tests.cpp  main.cpp  my_list.cpp  my_list.h
Homework_4_02_checking_add_functions/: CMakeLists.txt  Tests.cpp  my_list.cpp  my_list.h
Kursovaya rabota2_Race simulator/: Air_transport.cpp  Air_transport.h  All_terrain_boots.cpp  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Eagle.cpp  Fast_camel.cpp  Ground_transport.cpp  Ground_transport.h  Magic_carpet.cpp  Transport.cpp  Transport.h  main.cpp
Kursovaya rabota2_Race simulator/RaceLib/: Air_race.cpp  Air_race.h  CMakeLists.txt  Ground_race.cpp  Ground_race.h  Interface.cpp  Interface.h  Mix_race.cpp  Mix_race.h  Race.cpp  Race.h
Kursovaya rabota2_Race simulator/TransportLib/: Air_transport.cpp  Air_transport.h  All_terrain_boots.cpp  All_terrain_boots.h  Broomstick.cpp  Broomstick.h  CMakeLists.txt  Camel.cpp  Centaur.cpp  Centaur.h  Eagle.h  Fast_camel.cpp  Fast_camel.h  Ground_transport.cpp  Ground_transport.h  Magic_carpet.cpp  Magic_carpet.h  Transport.cpp  Transport.h
(+8 files in other folders)
